js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/top-level-import-defer-no-new-call-expression.js
DONOTEVALUATE
(
)
;
new
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
